# axekz-qqbot

./: README.md  members.json  pyproject.toml  requirements.txt
src/plugins/axekz/: __init__.py  config.py
src/plugins/axekz/core/: __init__.py
src/plugins/axekz/core/dataclasses/: servers.py
src/plugins/axekz/core/db/: __init__.py  crud.py  deps.py  models.py
src/plugins/axekz/core/utils/: command_helper.py  convertors.py  formatters.py  globalapi.py  helpers.py
src/plugins/axekz/plugins/: __init__.py  active.py  bet.py  coins.py  daily_active.py  general.py  join_group_approve.py  leaderboard.py  lee_god.py  long_jump.py  poke.py  power.py  roll.py  servers.py  whitelist.py
src/plugins/axekz/plugins/disabled/: anti_null.py  member_list.py
