[project]
name = "axekz-qqbot"
version = "0.1.0"
description = "axekz-qqbot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot-plugin-resolver", "nonebot_plugin_fakemsg", "nonebot_plugin_capoo", "nonebot_plugin_localstore", "nonebot_plugin_apscheduler", "nonebot_plugin_bracket", "nonebot_plugin_memes", "nonebot_plugin_eventmonitor", "nonebot_plugin_addFriend", "nonebot_plugin_report", "nonebot_plugin_matcher_block", "nonebot_plugin_access_control"]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]
